--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "highlight.js": "^11.5.1",
     "markdown-it": "^13.0.1",
+    "md-to-pdf": "^5.2.0",
     "punycode": "^2.1.1",
     "sirv-cli": "^2.0.0",
     "svelte-navigator": "^3.1.5",
